Add Engine / Bomberman namespace, Entity/World/Session draft

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,21 @@ include(FindIrrlicht)
 
 #ADD .CPP HERE
 set(SRCS 
+	./src/Engine/Session.cpp
+	./src/Engine/World.cpp
+	./src/Engine/Entity.cpp
+
+	./src/Bomberman/Game.cpp
+	./src/Bomberman/Field.cpp
+
 	./src/main.cpp
-	)
+)
 
 #ADD .HPP HERE
 set(HEADER
-	./src/test/test.hpp
-	)
+)
+
+include_directories(src)
 
 add_executable(bomberman ${SRCS} ${HEADER})
 
