Add freaking dolphin dancing in the world git status (player loads the dolphin model, Engine::AnimatedMesh sets the texture)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ set(SRCS
 	./src/Engine/World.cpp
 	./src/Engine/Entity.cpp
 	./src/Engine/CameraFPS.cpp
+	./src/Engine/Mesh.cpp
+	./src/Engine/AnimatedMesh.cpp
 
 	./src/Bomberman/Game.cpp
 	./src/Bomberman/Field.cpp
