Add Menu / Pregame but have probleme with binding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SRCS
 	./src/Bomberman/Game.cpp
 	./src/Bomberman/Gui.cpp
 	./src/Bomberman/Menu.cpp
+	./src/Bomberman/PreGame.cpp
 	./src/Bomberman/Field.cpp
 	./src/Bomberman/Player.cpp
 	./src/Bomberman/Camera.cpp
