--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set(SRCS
 	./src/Bomberman/Gui.cpp
 	./src/Bomberman/Menu.cpp
 	./src/Bomberman/PreGame.cpp
+	./src/Bomberman/Pause.cpp
 	./src/Bomberman/Field.cpp
 	./src/Bomberman/Player.cpp
 	./src/Bomberman/Camera.cpp
