--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ project(bomberman)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     add_compile_options(/W4 /WX /wd4244 /wd4267 /wd4305 /wd4100 /wd4458 /wd4127)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    add_compile_options(-Wall -Wextra -g -Wno-unused-parameter -Wno-deprecated-copy)
+    add_compile_options(-Wall -Wextra -O2 -Wno-unused-parameter -Wno-deprecated-copy)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s")
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
